Added convenience methods for response handling
- Added approved codes to config file
- The response handler now checks for 00, 08 and 11 for approved
transactions
- The response handler now contains additional functions to retrieve the
response code, response description, txn id, preauth id, client id and
token id.

--- a/config.ini
+++ b/config.ini
@@ -36,3 +36,8 @@ accepted_cards[] = "amex"
 accepted_cards[] = "dinersclub"
 accepted_cards[] = "discover"
 accepted_cards[] = "jcb"
+
+[approved_codes]
+approved_codes[] = "00"
+approved_codes[] = "08"
+approved_codes[] = "11"
